fix alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -81,6 +81,14 @@ h3 {
   line-height: 0;
 }
 
+.line-height-1-5{
+  line-height: 1.5rem;
+}
+
+.align-sub{
+  vertical-align: sub;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
